<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/radio_group"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/radio_group_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/product_medium"
        android:textColor="?primaryTextColor"
        android:textSize="18sp"
        android:text="@string/select_light_theme"/>

    <RadioButton
        android:id="@+id/rd_btn_1"
        style="@style/RadioBtnText"
        android:text="@string/def_theme_light"/>

    <RadioButton
        android:id="@+id/rd_btn_2"
        style="@style/RadioBtnText"
        android:text="@string/black_and_white"/>

    <RadioButton
        android:id="@+id/rd_btn_3"
        style="@style/RadioBtnText"
        android:text="@string/sweet_morning_light"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/radio_group_btn_set"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:text="@string/set"
        android:textAllCaps="false" />

</RadioGroup>