<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/list_item_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@drawable/bottom_sheet_rounded_corners"
        android:orientation="vertical"
        android:paddingTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/home_greeting"
            android:textAppearance="@style/Headline20TextAppearance"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="0dp"
            android:singleLine="true" />

        <TextView
            style="@style/MenuItemTextStyle"
            android:text="@string/library_info" />

        <TextView
            android:id="@+id/check_source_code"
            style="@style/MenuItemTextStyle"
            android:text="@string/source_code" />

        <TextView
            android:id="@+id/git_profile"
            style="@style/MenuItemTextStyle"
            android:text="@string/gitlab_profile" />

        <TextView
            android:id="@+id/app_info"
            style="@style/MenuItemTextStyle"
            android:text="@string/app_info" />

        <TextView
            style="@style/MenuItemTextStyle"
            android:gravity="center_horizontal"
            android:text="@string/note" />
    </LinearLayout>

    <ImageView
        android:id="@+id/user_profile"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginStart="32dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@id/list_item_container"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/list_item_container"
        tools:ignore="contentDescription" />

    <ImageView
        android:id="@+id/settings"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="12dp"
        android:src="@drawable/ic_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/list_item_container"
        tools:ignore="contentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>