<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="36dp"
    android:clipToPadding="false">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/search_background"
        android:elevation="2dp">

        <ImageView
            android:id="@+id/search_activity_close_btn"
            style="@style/ButtonStyle24"
            android:layout_gravity="start|center_vertical"
            android:contentDescription="@string/iv_btn_close_description"
            android:src="@drawable/ic_back" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            app:queryHint="@string/searchHint"
            app:closeIcon="@drawable/ic_close"
            app:iconifiedByDefault="false"
            app:showDividers="none"
            app:submitBackground="@drawable/active_item_background"
            app:searchIcon="@android:color/transparent" />

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/result_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="48dp"
        android:text="@string/search_null"
        android:textColor="?attr/secondaryTextColor"
        android:textSize="20sp"
        android:textStyle="italic"
        android:visibility="visible" />

</LinearLayout>